--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,3 @@
-/* reset css */
-*{
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    text-decoration: none;
-    scroll-behavior: smooth;
-}
-
 /* header */
 nav {
     width: 100%;
@@ -16,56 +7,64 @@ nav {
     position: relative;
     align-items: center;
 }
-.logo-nav{
+
+.logo-nav {
     position: absolute;
     left: 320px;
 }
-.nav-header {
-    
-}
+
+.nav-header {}
+
 .nav-header .nav-menu {
     display: flex;
     position: absolute;
     right: 240px;
     top: 50%;
     transform: translateY(-50%);
-    
+
 }
 
 .nav-header .nav-menu .nav-menu-list {
-   margin:0 45px;
-   font-size: 16px;
+    margin: 0 45px;
+    font-size: 16px;
 }
-.nav-menu-list>a{
+
+.nav-menu-list>a {
     color: #000;
     text-transform: uppercase;
     font-weight: 600;
-    
+
 }
 
 /* section */
 .banner {
     position: relative;
 }
-.banner-img .img{
+
+.banner-img .img {
     width: 100%;
 }
-.banner .banner-content{
+
+.banner .banner-content {
     position: absolute;
     top: 20%;
     left: 20%;
 }
-.banner-content .content-title{
+
+.banner-content .content-title {
     font-size: 32px;
 }
-.banner-content .content-img{
+
+.banner-content .content-img {
     margin-top: 10px;
 }
-.banner-content .content-describe{
+
+.banner-content .content-describe {
     width: 375px;
     margin-top: 20px;
 }
-.content-button button{
+
+.content-button button {
     width: 215px;
     height: 60px;
     margin-top: 50px;
@@ -74,23 +73,22 @@ nav {
     font-size: 22px;
 }
 
-.product{
+.product {
     position: relative;
     /* background: url(../images/trang-chu/bgSanpham.png);
     background-size: 100%;
     background-repeat: no-repeat;
     height: 1000px; */
 }
-.product .product-background .img{
-    width: 100%;
-}
-.product .product-content{
+
+.product .product-content {
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
 }
-.product .product-title{
+
+.product .product-title {
     margin-top: 150px;
     margin-bottom: 90px;
     font-size: 22px;
@@ -99,48 +97,51 @@ nav {
     align-items: center;
 }
 
-.product-list{
+.product-list {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
 }
-.card-item{
+
+.card-item {
     margin: 0px 30px;
     text-align: center;
 }
-.card-item .item-name{
+
+.card-item .item-name {
     margin-top: 20px;
     font-size: 20px;
 }
 
 /* introduce */
-.introduce{
+.introduce {
     position: relative;
 }
-.introduce-background .img{
-    width: 100%;
-}
-.introduce .number-phone{
+
+.introduce .number-phone {
     font-size: 30px;
     font-weight: 600;
     color: #aabc44;
     position: absolute;
-    top: 33%;  
+    top: 33%;
     right: 4%;
 
 }
-.introduce .introduce-content{
+
+.introduce .introduce-content {
     position: absolute;
     top: 55%;
     left: 20%;
 }
-.introduce-content .introduce-describe{
+
+.introduce-content .introduce-describe {
     width: 530px;
     margin-top: 20px;
-    text-align:justify;
+    text-align: justify;
 }
-.introduce-button button{
+
+.introduce-button button {
     width: 215px;
     height: 60px;
     margin-top: 30px;
@@ -151,20 +152,23 @@ nav {
 
 /* artist */
 
-.artist{
+.artist {
     position: relative;
 }
-.artist .artist-background .img{
+
+.artist .artist-background .img {
     width: 100%;
 }
-.artist .artist-content{
+
+.artist .artist-content {
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
 }
-.artist .artist-title{
-    margin-top: 150px;
+
+.artist .artist-title {
+    margin-top: 120px;
     margin-bottom: 90px;
     font-size: 24px;
     display: flex;
@@ -172,18 +176,77 @@ nav {
     align-items: center;
 }
 
-.artist-list{
+.artist-list {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
 }
-.artist-card{
+
+.artist-card {
     width: 230px;
     margin: 0px 20px;
     text-align: center;
 }
-.artist-card .artist-name{
+
+.artist-card .artist-name {
     margin-top: 20px;
+    margin-bottom: 20px;
     font-size: 20px;
+}
+
+/* Buy */
+.buy {
+    position: relative;
+    text-align: center;
+}
+
+.buy-content {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+}
+
+.buy-content .buy-title {
+    font-size: 24px;
+    margin-top: 140px;
+    margin-bottom: 90px;
+    font-size: 26px;
+    display: inline-block;
+}
+
+.buy-box input {
+    width: 812px;
+    height: 54px;
+    border: 3px #aabc44 solid;
+    font-size: 20px;
+    padding: 0px 20px;
+}
+
+.buy-box button {
+    width: 160px;
+    height: 60px;
+    margin-left: 24px;
+    font-size: 20px;
+    color: #000;
+    background-color: #aabc44;
+    border: none;
+}
+
+/* footer */
+.footer {
+    position: relative;
+}
+
+.footer-content {
+    position: absolute;
+    top: 40px;
+    left: 50%;
+    transform: translate(-50%);
+    display: flex;
+}
+.footer-content ul {
+    margin-left: 140px;
+    width: 200px;
 }
